Changes to html semantics, corrected class overlap that upset formatting, organized CSS semantically

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,13 +24,14 @@ h1 {
     font-size: 48px;
 }
 
-/*change colors in h1 font*/
-.seo {
-    color: #d9dcd6;
+/*spacing for h3 elements*/
+h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 /*header positioning*/
-header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -39,12 +40,12 @@ header div {
 }
 
 /*no markers for list*/
-header div ul {
+header nav ul {
     list-style-type: none;
 }
 
 /*list displays horizontally*/
-header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -58,6 +59,24 @@ a {
 /*paragraph sizing*/
 p {
     font-size: 16px;
+}
+
+/*spacing for entirety of footer*/
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+/*size for h2 element in footer*/
+footer h2 {
+    font-size: 20px;
+}
+
+/*change colors in h1 font*/
+.seo {
+    color: #d9dcd6;
 }
 
 /*background image under header*/
@@ -128,28 +147,9 @@ p {
     color: #ffffff;
 }
 
-/*spacing for h3 elements*/
-h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
 /*spacing and positioning for left-hand images*/
 .benefit-details img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-/*spacing for entirety of footer*/
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-/*size for h2 element in footer*/
-footer h2 {
-    font-size: 20px;
 }
